--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Personal blog
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://diegogifo.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
+twitter_username: N/D
 github_username:  DiegoGiFo
 
 # Build settings
